@startuml

namespace WireAPI {
    ' Relationships
    WireBusinessLogic.Controller *-- VSOApi
    WireBusinessLogic.Controller *-- EMailApi

    class EMailApi {        
        +Action<Exception> HandleError
        +Action<string> HandleMessage
        -readonly SmtpClient mailClient
        --
        +EmailApi(SmtpClient mailClient)
        --
        +void SendReminder(string recipientName, string emailAddress, string subject, string body)
        +public void SendReport()
        +void Error(Exception exception)
        +void Message(string message)
    }

    class VSOApi {
        +Action<Exception> HandleError
        +Action<string> HandleMessage
        -readonly SmtpClient mailClient
        --
        +VSOApi(VssConnection vssConnection)
        --
        +bool Connect()
        +bool Disconnect()
        +Check
        --
        +void Error(Exception exception)
        +void Message(string message)
    }
}

@enduml